--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,100 @@
     box-sizing: content-box;
 }
 
-
-
-
+    header{
+        display: flex;
+        width: 100%;
+        /* margin: 4%; */
+        justify-content: space-between;
+    }
+    
+    header h4,p{
+       font-size: 1.8rem;
+    }
+    
+    .caja__header{
+        width: 70%;
+    }
+    
+    .imagen__header{
+        display: flex;
+        font-size: 1.5rem;
+        width: 30%;
+        justify-content: center;
+    
+    }
+    
+    .imagen__header img{
+        width: 50%;
+        box-sizing: content-box;
+    }
+    
+    /* ____________________FIN HEADER________________ */
+    
+    main{
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: auto;
+        grid-gap: 30px;
+    }
+    
+    .caja1__main{
+        display: flex;
+        height: 100%;
+        align-items: center;
+        justify-content: space-around;
+        gap: 5px;
+        padding-top: 5%;
+    }
+    
+    .opciones{
+        display: flex;
+        justify-content: center;
+        width: 20%;
+        height: 100%;
+        align-items: center;
+        margin: 1rem;
+        border: 1px solid black;
+        border-radius: 12px;
+    }
+    
+    .opciones i{
+        font-size: 2rem;
+    }
+    
+    .navegador{
+        display: flex;
+        justify-content: center;
+        width: 80%;
+        height: 100%;
+        align-items: center;
+        border: 1px solid black;
+        border-radius: 10px;
+        margin: 1rem;
+        font-size: 1.5rem;
+        gap: 10px;
+    }
+    
+    .caja2__main{
+        display: flex;
+        width: 100%;
+        height: 100%;
+    }
+    
+    .items__1,
+    .items__2,
+    .items__3,
+    .items__4{
+       width: 100%;
+       height: 100%;
+       font-size: 1.5rem;
+       text-align: center;
+    }
+    
+    .caja3__main{
+       display: grid;
+       grid-template-columns: 1fr 1fr;
+       grid-template-rows: auto;
+       justify-items: center;
+    
+    }
